# Darkmoon-Engine

./: Cargo.toml  ICON_INTEGRATION_STATUS.md  README.md  RENDER_MODE_FIX.md  fps_test.rs  test_translucent_debug.rs  view_state.dmoon
.cargo/: config.toml
assets/scenes/: battle.dmoon  car.dmoon  car2.dmoon  conference.dmoon  cornell_box.dmoon  gas_stations.dmoon  girl.dmoon  glass.dmoon  mini_battle.dmoon  pica.dmoon  roughness-scale.dmoon  tree.dmoon  viziers.dmoon
assets/shaders/: raster_simple_ps.hlsl  temporal_reprojection.hlsl  translucent_ps.hlsl  translucent_ps_simple.hlsl  translucent_vs.hlsl  translucent_vs_simple.hlsl
assets/shaders/inc/: mesh.hlsl
assets/shaders/rt/: gbuffer.rchit.hlsl
assets/shaders/vrs/: generate_shading_rate.hlsl
crates/lib/ash-imgui/: Cargo.toml
crates/lib/darkmoon-icons/: Cargo.toml
crates/lib/darkmoon-icons/examples/: test_icons.rs
crates/lib/darkmoon-icons/src/: font_setup.rs  lib.rs  lib_new.rs  lib_old.rs
crates/lib/icons/: font_setup.rs  mod.rs
crates/lib/kajiya/: Cargo.toml
crates/lib/kajiya-asset/src/: import_gltf.rs  lib.rs  mesh.rs  vfs_utils.rs
crates/lib/kajiya-backend/: Cargo.toml
crates/lib/kajiya-backend/src/: lib.rs  pipeline_cache.rs  shader_compiler.rs  shader_progress.rs
crates/lib/kajiya-imgui/: Cargo.toml
crates/lib/kajiya-imgui/src/: imgui_backend.rs
crates/lib/kajiya-rg/: Cargo.toml
crates/lib/kajiya-rg/src/: graph.rs  renderer.rs
crates/lib/kajiya-simple/: Cargo.toml
crates/lib/kajiya-simple/src/: input.rs  main_loop.rs
crates/lib/kajiya-streaming/: Cargo.toml  README.md
crates/lib/kajiya-streaming/src/: asset_loader.rs  resource_manager.rs
crates/lib/kajiya/src/: lib.rs  (+5 more)
crates/lib/resource-streaming/: README.md
docs/: frustum-culling.md  icon-integration.md  resource-streaming.md
examples/: asset_browser_with_icons.rs  ffi_bindings_example.rs  test_iconfonts.rs
scripts/: download_fontawesome.sh
(+15 files in other folders)
