[package]
name = "kajiya-imgui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kajiya = { path = "../kajiya" }

ash-imgui = { path = "../ash-imgui" }
imgui = { version = "0.11", features = ["docking", "tables-api"] }
imgui-winit-support = { version = "0.11", default-features = false }
log = "0.4"
parking_lot = "0.11"
winit = { workspace = true }
