[package]
name = "kajiya-simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kajiya = { path = "../kajiya" }
kajiya-imgui = { path = "../kajiya-imgui", optional = true }

anyhow = "1.0"
glam = { version = "0.22", features = ["serde"] }
log = "0.4"
puffin = { workspace = true }
turbosloth = { git = "https://github.com/h3r2tic/turbosloth.git", rev = "92030af" }
winit = { workspace = true }
gilrs = "0.10"

puffin_http = { workspace = true, optional = true }
imgui = { version = "0.11", features = ["docking", "tables-api"], optional = true }

[features]
dear-imgui = [
    "imgui",
    "kajiya-imgui",
]
puffin-server = [
    "puffin_http",
]
winit_serde = [
    "winit/serde",
]
gpu-profiler-enabled = [
    "kajiya/gpu-profiler-enabled",
]
