[package]
name = "resource-streaming"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4.22"
futures = "0.3"
crossbeam-channel = "0.5"
parking_lot = "0.12"
lru = "0.12"
bytesize = "1.3"
async-std = "1.12"
scopeguard = "1.2"

[dependencies.kajiya-backend]
path = "../kajiya-backend"

[dependencies.kajiya-asset]
path = "../kajiya-asset"
